<resources>
    <string name="app_name">Sleep Tracker</string>
    <string name="button_new_text">New Sleep Entry</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Settings</string>
    <string name="title_dashboard">Create New Entry</string>
    <string name="title_notifications">Your Sleep Breakdown</string>
    <string name="mood_rating_placeholder">Mood Rating: 4</string>
    <string name="tired_rating_placeholder">Tired Rating: 3</string>
    <string name="wake_time_placeholder">Wake Time: 8am</string>
    <string name="bed_time_placeholder">Bed Time: 8pm</string>
    <string name="text_date_placeholder">Entry Date: 4/15/2019</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_hours_placheholder">8</string>
    <string name="recommended_hours_static_text">Reccomended Hours of Sleep</string>
    <string name="home_title_placeholder">Hello!</string>
    <string name="settings_title">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="enter_date">Enter Date:</string>
    <string name="date_placeholder">YYYY-MM-DD</string>
    <string name="date_button_text">Pick Date</string>
    <string name="bedtime">Bedtime:</string>
    <string name="bedtime_placeholder">hh:mm</string>
    <string name="time_button_text">Pick Time</string>
    <string name="wake_time">Wake Time:</string>
    <string name="tired_rating">Tired Rating at bed time</string>
    <string name="wake_mood">Mood When Waking</string>
    <string name="submit_button">Submit Sleep Entry</string>
    <string name="update_button">Update Entry</string>
    <string name="delete_button">Delete Entry</string>
    <string name="time_slept_placeholder">Time Slept: 8 hours</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sleep_breakdown_part_1">Sleep is very important in regards to your overall health! The Sleep Tracker team would like to help people just like you to better manage your sleeping habits, and live the healthiest life you can. This breakdown will show you what we think will be the best amount of sleep for your body based on the information you have given us. The Mayo Clinic has written this summary of their recommendation for average sleep time by age. To learn more about what the Mayo Clinic does, and see more interesting statistics like this, go to their website at: https://www.mayoclinic.org/ </string>
    <string name="sleep_breakdown_part_2">Newborns: 14 to 17 hours a day \n12 months: About 10 hours at night, plus 4 hours of naps \n2 years: About 11 to 12 hours at night, plus a 1- to 2-hour afternoon nap \n3 to 5 years: 10 to 13 hours \n6 to 13 years: 9 to 11 hours \n14 to 17 years: 8 to 10 hours \nAdults: 7 to 9 hours</string>
    <string name="login_warning">Please Login to track your sleeping habits!</string>
    <string name="about_title">Team Members</string>
    <string name="about_peter">Team Lead - Peter Pham</string>
    <string name="about_peter_body">A humble developer who\'s always learning and improving. Seeking to solve challenging problems, collaborate with others, and build meaningful projects.</string>
    <string name="about_benson">Front End Architect - Benson Lei</string>
    <string name="about_tyler">User Interface Developer - Tyler Biswell</string>
    <string name="about_tyler_body">Tyler is a newfound developer and student at Lambda School. Tyler was tasked with designing and building the marketing site for Sleep Tracker during his fifth week as a developer. Tyler enjoys solving problems and interacting with others. Father of three, child of technology.</string>
    <string name="about_jacob">Backend Architect - Jacob McFaul</string>
    <string name="about_giacomo">Backend Architect - Giacomo Benati</string>
    <string name="about_jake">Android Developer - Jake Esveld</string>
    <string name="about_jake_body">Jake is an aspiring Android developer, currently attending Lambda Schools in his fifth week. With a diverse coding background, but all of it being self-taught, he is excited to finally have some structure in his education. He hopes to one day change the world by means of the use of AI in the renewable energy industry.</string>
    <string name="about_benson_body">In addition to being a San Francisco native and developer, Benson has also worked in the biological field as a researcher and in dental healthcare.</string>
    <string name="about_jacob_body">Jacob likes to let his work speak for itself. When Jacob isn\'t coding away, he likes to spend his time rock climbing and golfing.</string>
    <string name="about_giacomo_body">I\'m Giacomo, passionately curious about the word around me, I\'m learning the secret art of coding at Lambda School. I\'ve also been just accepted to have an internship there as a Project Manager. I love football (soccer), boxing and martial arts in general</string>
    <string name="our_website">Our Website</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="entry_warning">No entries detected. Please create a new entry to get started!</string>

</resources>
