<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewEntryFragment">

    <LinearLayout
        android:id="@+id/layout_date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/text_date"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/enter_date"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_date"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/date_placeholder"
        app:layout_constraintStart_toEndOf="@id/text_date"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/date_button_text"
        android:background="@color/colorAccent"
        android:id="@+id/button_pick_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bed_time"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/text_bed_time"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/bedtime"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_bed_time"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/bedtime_placeholder"
        app:layout_constraintStart_toEndOf="@id/text_date"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_bed_time"
        android:text="@string/time_button_text"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_wake_time"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/layout_bed_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/text_wake_time"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/wake_time"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_wake_time"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/bedtime_placeholder"
        app:layout_constraintStart_toEndOf="@id/text_date"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_wake_time"
        android:text="@string/time_button_text"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_time_slept"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/layout_wake_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/text_view_time_slept"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/tired_rating"
        android:id="@+id/text_tired_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_tired_rating"
        android:id="@+id/layout_tired_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_tired_1"
            android:src="@drawable/frown"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_tired_2"
            android:src="@drawable/meh"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_tired_3"
            android:src="@drawable/smile"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_tired_4"
            android:src="@drawable/big_smile"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
    app:layout_constraintTop_toBottomOf="@id/layout_tired_rating"
    android:textSize="32sp"
    android:textAlignment="center"
    android:text="@string/wake_mood"
    android:id="@+id/text_wake_mood_rating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_wake_mood_rating"
        android:id="@+id/layout_wake_mood_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_wake_1"
            android:src="@drawable/frown"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_wake_2"
            android:src="@drawable/meh"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_wake_3"
            android:src="@drawable/smile"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image_wake_4"
            android:src="@drawable/big_smile"
            android:adjustViewBounds="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:layout_margin="10dp"
        android:text="@string/submit_button"
        android:id="@+id/button_submit"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/layout_wake_mood_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/update_button"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/button_update"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/delete_button"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/button_delete"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>