<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_parent"
        android:padding="10dp"
        android:background="?android:attr/windowBackground"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view_graph"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/big_smile"
        android:adjustViewBounds="true"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_entry_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_view_graph"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_date_placeholder"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/image_view_graph"
            app:layout_constraintTop_toBottomOf="@id/text_view_entry_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">



            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/text_tired_rating"
                    android:textAlignment="center"
                    android:text="@string/tired_rating_placeholder"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_mood_rating"
                    android:textAlignment="center"
                    android:text="@string/mood_rating_placeholder"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <TextView
                android:id="@+id/text_time_slept"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/time_slept_placeholder"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </LinearLayout>



    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>